--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <form action="#">
-        <h2>I Love You 💗💖💌💝</h2>
-        <h3>Will You Be My Girlfriend 🥺</h3>
+        <h2>I Love You Koyna💗💖💌💝</h2>
+        <h3>Will You Be My Girlfriend🥺</h3>
         <div class="buttons">
             <input type="submit" value="Yes" id="yes">
             <input type="Submit" value="No" id="no">
